--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
@@ -27,47 +31,42 @@
   </head>
 
   <body ng-controller="ComposerController">
-    <h1>Example 3</h1>
-    <hr />
+    <div id="header"><span>3</span>Famous Composers</div>
 
-    <!-- 3 clickable composer pictures -->
-    <table class="top-table">
-      <tr>
-        <td>
-          <img
-            ng-click="select = 'Bach'"
-            src="assets/bach.jfif"
-            alt="Image of Bach"
-          /><br />
-          Bach
-        </td>
-        <td>
-          <img
-            ng-click="select = 'Beethoven'"
-            src="assets/beethoven.jfif"
-            alt="Image of Beethoven"
-          /><br />
-          Beethoven
-        </td>
-        <td>
-          <img
-            ng-click="select='Mozart'"
-            src="assets/mozart.jfif"
-            alt="Image of Mozart"
-          /><br />
-          Mozart
-        </td>
-      </tr>
-    </table>
+    <div class="container">
+      <div id="composer__bach">
+        <img
+          ng-click="select = 'Bach'"
+          src="assets/bach.jfif"
+          alt="Image of Bach"
+          id="bach"
+        /><br />
+        <h1>Bach</h1>
+      </div>
+      <div id="composer__beethoven">
+        <img
+          ng-click="select = 'Beethoven'"
+          src="assets/beethoven.jfif"
+          alt="Image of Beethoven"
+          id="beethoven"
+        /><br />
+        <h1>Beethoven</h1>
+      </div>
+      <div id="composer__mazart">
+        <img
+          ng-click="select='Mozart'"
+          src="assets/mozart.jfif"
+          alt="Image of Mozart"
+          id="mozart"
+        /><br />
+        <h1>Mozart</h1>
+      </div>
+    </div>
 
-    <!--  -->
-
+    <div class="main">Top <span>5</span> Pieces of Music</div>
     <table class="bottom-table">
-      <tr>
-        <td colspan="3"><h2>Top 5 Pieces of Music</h2></td>
-      </tr>
       <tr ng-repeat="p in pieces" ng-if="p.composer == select">
-        <td><img src="{{p.pic}}" alt="" /></td>
+        <td><img src="{{p.pic}}" alt="Picture of composers" /></td>
         <td>{{p.composer}}</td>
         <td>{{p.title}}</td>
       </tr>
