Substitute picture of Beethoven for a clearer one

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
           alt="Image of Bach"
           id="bach"
         /><br />
-        <h1>Bach</h1>
+        <h2>Bach</h2>
       </div>
       <div id="composer__beethoven">
         <img
           ng-click="select = 'Beethoven'"
-          src="assets/beethoven.jfif"
+          src="assets/beethoven.png"
           alt="Image of Beethoven"
           id="beethoven"
         /><br />
-        <h1>Beethoven</h1>
+        <h2>Beethoven</h2>
       </div>
       <div id="composer__mazart">
         <img
@@ -59,7 +59,7 @@
           alt="Image of Mozart"
           id="mozart"
         /><br />
-        <h1>Mozart</h1>
+        <h2>Mozart</h2>
       </div>
     </div>
 
